--- a/about.html
+++ b/about.html
@@ -6,12 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/about.css">
 	<meta name="veiwport" content="width=device-width",initial-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatable" content="ie-edge">
-
 	<!--link rel="stylesheet" type="text/css" href="css/style1.css"-->
 	<!--link rel="stylesheet" type="text/css" href="css/1.css"-->
-
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 	<script
   src="https://code.jquery.com/jquery-3.3.1.js">
 </script>
@@ -39,22 +36,23 @@
 			<li><a href="login.html">Login</a></li>
 		</ul>
 	</header>
-
 <div class="team">
 	<span class="border"></span>
 	<h1>Our Team</h1>
 	<div class="ps">
-		<a href="#p1"><img src="img/ramya.jpg" width="30%" height="80%"></a>
-		<a href="#p2"><img src="img/bhavya.jpg"width="30%" height="80%"></a>
-		<a href="#p3"><img src="img/likitha.jpg"width="30%" height="80%"></a>
-		<a href="#p4"><img src="img/lavanya.jpg"width="30%" height="80%"></a>
-		<a href="#p5"><img src="img/pavan.jpg"width="30%" height="80%"></a>
+		<a href="#p1"><img src="img/ramya.jpg" width="60%" height="75%"></a>
+		<a href="#p2"><img src="img/bhavya.jpg"width="60%" height="75%"></a>
+		<a href="#p3"><img src="img/likitha.jpg"width="60%" height="75%"></a>
+		<br><br>
+		<a href="#p4"><img src="img/lavanya.jpg"width="60%" height="75%"></a>
+		<a href="#p5"><img src="img/pavan.jpg"width="60%" height="75%"></a>
+		<a href="#p6"><img src="img/kalyan.jpg"width="60%" height="75%"></a>
 	</div>
 	<div class="section" id="p1">
 		<span class="name">Ramya</span>
 		<span class="border"></span>
 		<p>
-			Teamwork is the beauty of our sport, where you have five acting as one.
+			Teamwork is the beauty of our sport, where you have six acting as one.
 		</p>
 		
 	</div>
@@ -62,7 +60,7 @@
 		<span class="name">Bhavya</span>
 		<span class="border"></span>
 		<p>
-			Teamwork is the beauty of our sport, where you have five acting as one.
+			Teamwork is the beauty of our sport, where you have six acting as one.
 		</p>
 		
 	</div>
@@ -70,7 +68,7 @@
 		<span class="name">Likitha</span>
 		<span class="border"></span>
 		<p>
-			Teamwork is the beauty of our sport, where you have five acting as one.
+			Teamwork is the beauty of our sport, where you have six acting as one.
 		</p>
 		
 	</div>
@@ -78,7 +76,7 @@
 		<span class="name">Lavanya</span>
 		<span class="border"></span>
 		<p>
-			Teamwork is the beauty of our sport, where you have five acting as one.
+			Teamwork is the beauty of our sport, where you have six acting as one.
 		</p>
 		
 	</div>
@@ -86,10 +84,16 @@
 		<span class="name">Pavan</span>
 		<span class="border"></span>
 		<p>
-			Teamwork is the beauty of our sport, where you have five acting as one.
+			Teamwork is the beauty of our sport, where you have six acting as one.
 		</p>
 		
 	</div>
+	<div class="section" id="p6">
+		<span class="name">Kalyan</span>
+		<span class="border"></span>
+		<p>
+			Teamwork is the beauty of our sport, where you have six acting as one.
+		</p>
 </div>
 </body>
 </html>
